Moved my app from sandbox to vscode

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+.container {
+  margin-top: 30px;
+  padding-top: 20px;
+  padding-right: 20px;
+  background: rgba(166, 155, 245, 0.516);
+  border: 2px solid #4c3381;
+  border-radius: 5px;
+  padding-left: 30px;
+  border-radius: 10px;
+  max-width: 700px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+ul {
+  list-style: none;
+}
+h1 {
+  color: #939aa9;
+  font-size: 50px;
+}
+h2 {
+  color: #5a6275;
+  font-size: 50px;
+}
+h3 {
+  font-size: 20px;
+}
+h4,
+h5 {
+  font-size: 15px;
+  padding-top: 10px;
+}
+
+.coder {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#forecast {
+  padding-bottom: 20px;
+  padding-top: 10px;
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#degree {
+  font-family: monospace;
+  font-size: 30px;
+  font-weight: 300;
+  position: relative;
+  bottom: 18px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#toC,
+#toF {
+  text-decoration: none;
+  color: #4c3381;
 }
